<resources>
    <string name="app_name">WorkManager</string>
    <string name="description_image">The image to blur and save.</string>
    <string name="blur_title">Select Blur Amount</string>
    <string name="blur_lv_1">A little blurred</string>
    <string name="blur_lv_2">More blurred</string>
    <string name="blur_lv_3">The most blurred</string>
    <string name="cancel_work">Cancel Work</string>
    <string name="select_image">Select Image</string>
    <string name="go">Go</string>
    <string name="see_file">See File</string>
</resources>